Salty madeleine: text edit.

--- a/recipes/salty_madeleines.html
+++ b/recipes/salty_madeleines.html
@@ -19,7 +19,7 @@
 
 <h2>Salty Madeleines</h2>
 
-<p>By removing the sugar in the regular <a href="desserts/madeleines.html">Madeleine recipe</a>, you can also make salty madeleines. It is an opportunity to try baking in ham, cheese, and/or vegetables.</p>
+<p>Using the regular <a href="desserts/madeleines.html">Madeleine recipe</a> without sugar, you can make salty madeleines. It is an opportunity to try baking in ham, cheese, and/or vegetables.</p>
 
 <div class="m-salty">
 
