--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="movies" class="c2"><div class="sTitle">Movies</div>
-	<p>I like to watch sci-fi movies.</p>
+	<p>I like to watch sci-fi movies and anime but I do not own a TV.</p>
 	<div id="movies2" class="pixGroup moviePix"></div>
 </section>
 
