--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link rel="icon" type="image/png" href="favicon.png" />
+	<link href="css/me.css" rel="stylesheet" />
 	<script src="js/me.js"></script>
-	<link href="css/me.css" rel="stylesheet" /> 
 
 	<meta name="keywords" content="olivier giulieri home page evoluteur UI UX developer engineer meditator" />
 	<meta name="description" content="Home Page of Olivier Giulieri" />
@@ -64,9 +64,8 @@ other way around."</i> - Eric S. Raymond
 	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 	</p>
 
-	<p>I really enjoy metadata, so I am very interested in model-driven architecture, low-code platforms, and data visualization. 
+	<p>I am very interested in metadata and generic code (usually found in model-driven architecture, low-code platforms, and data visualization...).
 	I experiment with my own project <a target="_blank" href="http://evolutility.org">Evolutility</a> CRUD framework since 2002.</p>
-
 
 </section>
 
@@ -123,7 +122,7 @@ other way around."</i> - Eric S. Raymond
 <div class="bottomSpace"></div>
 
 
-<footer>Version 2018.02.18 - &#169; 2018 Olivier Giulieri</footer>
+<footer>&#169; 2018 Olivier Giulieri - Version 2018.10.21</footer>
 
 </body>
 
