--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -83,7 +83,7 @@
 </p>
 </section>
 
-<div class="cog">&#169; 2018 Olivier Giulieri</div>
+<footer>&#169; 2018 Olivier Giulieri</footer>
 
 </body>
 
