--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -70,8 +70,12 @@
 
 	<p>Melted chocolate = <a href="https://smile.amazon.com/Ghirardelli-Chocolate-Bittersweet-Baking-Chips/dp/B005HZM6UU" target="_blank">Ghirardelli chocolate bittersweet baking chips</a> and a little bit of heavy whipping cream <a href="https://en.wikipedia.org/wiki/Bain-marie" target="_blank">au bain Marie</a>.</p>
 
-	<p>When prep time is an issue, I simply have a <a target="_blank" href="https://www.haagendazs.us/products/4061/bars/chocolate-dark-chocolate-almond-bar/">Haagen-Dazs dark chocolate almond bar</a> or some <a target="_blank" href="http://www.honeymoonbrands.com">Honeymoon ice cream</a> southern pecan.</p>
-
+	<p>When prep time is an issue, I simply have  
+		<a target="_blank" href="http://threetwinsicecream.com/products/ice-cream/lemon-cookie/">ThreeTwins lemon cookie</a>, 
+		<a target="_blank" href="http://www.humphryslocombe.com/">Humphry Slocombe vietnamese coffee</a>,
+		or
+		<a target="_blank" href="http://www.honeymoonbrands.com">Honeymoon southern pecan</a>.
+	</p>
 
 </section>
 </body>
