--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -1,4 +1,6 @@
-<html xmlns="http://www.w3.org/1999/xhtml" > 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 <title>French desserts recipes</title>
     <meta charset="utf-8">
@@ -38,7 +40,7 @@
 		 	<li>Chantilly cream</li>
 		 	<li>Grilled almonds</li>
 		 </ul>
-		 </div>
+		</div>
 		<div><strong>Peach Melba</strong>
 		 <ul>
 		 	<li>Vanilla ice cream</li>
@@ -55,8 +57,7 @@
 		 	<li>Coffee beans</li>
 		 </ul>
 		</div>
-		<div>
-		<strong>Vacherin</strong>
+		<div><strong>Vacherin</strong>
 		 <ul>
 		 	<li>Meringue</li>
 		 	<li>Vanilla ice cream</li>
@@ -65,7 +66,7 @@
 		 </ul>
 		</div>
 	</div>
-	<div class="clearer"/>
+	<div class="clearer"></div>
 </div> 
 
 	<p>Melted chocolate = <a href="https://smile.amazon.com/Ghirardelli-Chocolate-Bittersweet-Baking-Chips/dp/B005HZM6UU" target="_blank">Ghirardelli chocolate bittersweet baking chips</a> and a little bit of heavy whipping cream <a href="https://en.wikipedia.org/wiki/Bain-marie" target="_blank">au bain Marie</a>.</p>
