--- a/recipes/salty_madeleines.html
+++ b/recipes/salty_madeleines.html
@@ -1,8 +1,10 @@
-<html xmlns="http://www.w3.org/1999/xhtml" > 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <title>Salty Madeleines</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link rel="icon" type="image/png" href="favicon.png" />
