--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-	<title>Evol=lovE</title>
+	<title>Hello world!</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -50,7 +50,8 @@
 
 <section id="me" class="c7"><div class="sTitle">Me</div>
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
-	 I'm French, in my late 40s. I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.</p>
+	 I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.
+	  I work in Tech. I'm French.</p>
 
 </section>
 
@@ -79,7 +80,7 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I recently started experimenting with <a href="recipes/salty_madeleines.html">salty madeleines</a>. Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.</p>
+	<p>I recently started experimenting with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html">salty madeleines</a>. Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.</p>
 
 	<p></p>
 </section>
@@ -124,7 +125,7 @@ other way around."</i> - Eric S. Raymond
 <div class="bottomSpace"></div>
 
 
-<footer>&#169; 2018 Olivier Giulieri - Version 2018.10.21</footer>
+<footer>&#169; 2019 Olivier Giulieri - Version 2019.03.24</footer>
 
 </body>
 
