--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -55,9 +55,9 @@
 	<li>add the cream, the milk and the vanilla</li>
 	<li>pour in ramekins</li>
 	<li>(optionally) add fruit in some ramekins</li>
-	<li>fill a long baking dish 1/3 w/ water and put the ramekins in it (the water should not go in the ramekins)</li>
-	<li>bake for about 1 hour depending on your oven (they are cooked when shaking the dish the cream is firm but not hard)</li>
-	<li>let cool down and put in the fridge for a few hours (they will become harder when cold)</li>
+	<li>prepare "<a href="https://en.wikipedia.org/wiki/Bain-marie" target="bm">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins)</li>
+	<li>bake for about 1 hour depending on your oven (they are cooked when firm but not hard)</li>
+	<li>let cool down and put in the fridge for a few hours (they will be harder when cold)</li>
 </ol>
 
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/creme-brulee-bernzomatic.jpg"></div>
@@ -77,7 +77,6 @@
 
 
 <p>Notes: 
-
 <ul>
 	<li>Great w/ <a href="https://en.wikipedia.org/wiki/Sauternes_(wine)" target="wine">Sauterne wine</a>.</li>
 	<li>Replace heavy whip cream by half-and-half for a lighter version.</li>
@@ -85,7 +84,7 @@
 </p>
 </section>
 
-<footer>&#169; 2018 Olivier Giulieri</footer>
+<footer>&#169; 2019 Olivier Giulieri</footer>
 
 </body>
 
