New picture + minor text edits.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="avatar-holder">
 		<div class="avatar">
 			<div class="pixTitleHolder">
-				<img src="pix/olivier/olivier-giulieri.jpg" onclick="switchPix(this)">
+				<img src="pix/olivier/og-2019.jpg" onclick="switchPix(this)">
 			</div>
 			<span class="sociallinks">
 				<a href="https://github.com/evoluteur"><img src="pix/social/git.gif" alt="GitHub" /></a>
@@ -56,7 +56,7 @@
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
-	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups. I also play with <a target="_blank" href="https://github.com/evoluteur">open source projects</a> and I occasionally <a target="_blank" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups.</p>
 
 	<div id="code2" class="pixGroup evolPix"></div>
 	
@@ -66,9 +66,9 @@
 other way around."</i> - Eric S. Raymond
 	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 	</p>
-
+	
 	<p>I am very interested in metadata and generic code (usually found in model-driven architecture, low-code platforms, and data visualization...).
-	I experiment with my own project <a target="_blank" href="http://evolutility.org">Evolutility</a> CRUD framework since 2002.</p>
+	I experiment with my open-source project Evolutility model-driven <a target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>.</p>
 
 </section>
 
@@ -80,7 +80,9 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I recently started experimenting with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html">salty madeleines</a>. Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.</p>
+	<p>I recently started experimenting with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html">salty madeleines</a>. 
+		Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.
+	</p>
 
 	<p></p>
 </section>
