Added icon to external links.

--- a/book-carving.html
+++ b/book-carving.html
@@ -21,13 +21,13 @@
 
 	<h2>Book carving</h2>
 
-	<p>After watching the inspiring TED talk <a href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art" target="ted">Old books reborn as intricate art</a> by Brian Dettmer, I was so inspired I decided to make my first book carving.</p>
+	<p>After watching the inspiring TED talk <a class="extlink" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art" target="ted">Old books reborn as intricate art</a> by Brian Dettmer, I was so inspired I decided to make my first book carving.</p>
 
 	<div> 
 		<img class="pixShadow" src="pix/art/book-carving-1.jpg">
 	</div>
 
-	<p>I used the book <a href="https://www.amazon.com/Grand-Tour-Travelling-Architects-26-Nov-2004/dp/B013J969TO/ref=sr_1_8" target="amzn">The Grand Tour</a> for this book carving.</p>
+	<p>I used the book <a class="extlink" href="https://www.amazon.com/Grand-Tour-Travelling-Architects-26-Nov-2004/dp/B013J969TO/ref=sr_1_8" target="amzn">The Grand Tour</a> for this book carving.</p>
 
 </section>
 
