--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 	<p>My favorite quote about programming is 
 		<i>"Smart data structures and dumb code works a lot better than the
 other way around."</i> - Eric S. Raymond
-	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
+	in <a class="extlink" href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 	</p>
 	
 	<p>I am very interested in metadata and generic code (usually found in model-driven architecture, low-code platforms, and data visualization...).
-	I experiment with my open-source project Evolutility model-driven <a target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>.</p>
+	I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>.</p>
 
 </section>
 
@@ -88,7 +88,7 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="fractals" class="c4"><div class="sTitle">Inspiration</div>
-	<p>I like to look at <a target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a target="_blank" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
+	<p>I like to look at <a class="extlink" target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
 
 	<p>I also like visual art made by humans. <span class="grey">... and it often contains fractals.</span></p>
@@ -98,7 +98,7 @@ other way around."</i> - Eric S. Raymond
 	<p></p>
 
 
-	<p>I recently learned that <a href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art" target="ted">old books could be reborn as art</a>, and I liked the idea, so I'm giving a try at <a href="book-carving.html">book carving</a>.</p>
+	<p>I recently learned that <a class="extlink" target="ted" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving a try at <a href="book-carving.html">book carving</a>.</p>
 
 </section>
 
@@ -119,9 +119,9 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
-	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
+	<p>I like to meditate and to make <a class="extlink" target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
-	<p>You could <a target="_blank" href="http://chakradesign.com/charms.html">design your own chakras charm</a> too.</p>
+	<p>You could <a class="extlink" target="_blank" href="http://chakradesign.com/charms.html">design your own chakras charm</a> too.</p>
 </section>
 
 <div class="bottomSpace"></div>
