--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -55,7 +55,7 @@
 	<li>add the cream, the milk and the vanilla</li>
 	<li>pour in ramekins</li>
 	<li>(optionally) add fruit in some ramekins</li>
-	<li>prepare "<a href="https://en.wikipedia.org/wiki/Bain-marie" target="bm">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins)</li>
+	<li>prepare "<a class="extlink" target="bm" href="https://en.wikipedia.org/wiki/Bain-marie">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins)</li>
 	<li>bake for about 1 hour depending on your oven (they are cooked when firm but not hard)</li>
 	<li>let cool down and put in the fridge for a few hours (they will be harder when cold)</li>
 </ol>
@@ -63,13 +63,13 @@
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/creme-brulee-bernzomatic.jpg"></div>
 <p>Instructions for burning the caramel crust (just before serving):
 
-<ol>Using a torch (I personaly use a <a href="http://www.bernzomatic.com/" target="b">Bernzomatic</a>):
-	<li>put some brown sugar on the cold Crème brûlée.</li>
+<ol>Using a torch (I personaly use a <a class="extlink" target="b" href="http://www.bernzomatic.com/">Bernzomatic</a>):
+	<li>put some brown sugar on the cold custard.</li>
 	<li>put the flame on the brown sugar (not too close) and it will melt into caramel</li>
 </ol>
 
 <ol>Using a crème brûlée branding iron (the old-fashion way):
-	<li>put some brown sugar on the cold Crème brûlée. </li>
+	<li>put some brown sugar on the cold custard. </li>
 	<li>heat the branding iron by putting it directly on the burner until it's hot (but not turning red)</li>
 	<li>put the iron on the brown sugar and it will turn into caramel</li>
 	<li>if the branding iron is hot enough it can be used for 2 cremes in a row otherwise put it back on the burner before the next one</li>
@@ -78,7 +78,7 @@
 
 <p>Notes: 
 <ul>
-	<li>Great w/ <a href="https://en.wikipedia.org/wiki/Sauternes_(wine)" target="wine">Sauterne wine</a>.</li>
+	<li>Great w/ <a class="extlink" target="wine" href="https://en.wikipedia.org/wiki/Sauternes_(wine)">Sauterne wine</a>.</li>
 	<li>Replace heavy whip cream by half-and-half for a lighter version.</li>
 </ul>
 </p>
