New profile picture w/ handlebar.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="avatar-holder">
 		<div class="avatar">
 			<div class="pixTitleHolder">
-				<img src="pix/olivier/og-2019.jpg" onclick="switchPix(this)">
+				<img src="pix/olivier/og-handlebar.jpg" onclick="switchPix(this)">
 			</div>
 			<span class="sociallinks">
 				<a href="https://github.com/evoluteur"><img src="pix/social/git.gif" alt="GitHub" /></a>
@@ -57,9 +57,7 @@
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
 	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups.</p>
-
 	<div id="code2" class="pixGroup evolPix"></div>
-	
 
 	<p>My favorite quote about programming is 
 		<i>"Smart data structures and dumb code works a lot better than the
