Added canneles recipe.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ other way around."</i> - Eric S. Raymond
 	<p>I like to cook (and eat), especially desserts. My specialties are 
 		<a href="recipes/desserts/creme-brulee.html">crèmes brûlées</a>,
 		<a href="recipes/desserts/pear-cream-tart.html">pear cream tart</a>,
-		and <a href="recipes/desserts/madeleines.html">madeleines</a>.</p>
+		<a href="recipes/desserts/madeleines.html">madeleines</a>,
+		and <a href="recipes/desserts/canneles.html">cannelés</a>.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
@@ -124,7 +125,7 @@ other way around."</i> - Eric S. Raymond
 <div class="bottomSpace"></div>
 
 
-<footer>&#169; 2019 Olivier Giulieri - Version 2019.03.24</footer>
+<footer>&#169; 2020 Olivier Giulieri - Version 2020.04.08</footer>
 
 </body>
 
