--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear Cream Tart</a> - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear cream tart</a> - <a href="madeleines.html">Madeleines</a> - <a href="canneles.html">Cannelés</a>
 </div>
 
 <section class="c00">
@@ -25,6 +25,7 @@
 	<div class="pixTitleHolder"><a href="creme-brulee.html"><img src="../../pix/recipes/creme-brulee.jpg"><div class="pix-title">Crème brûlée</div></a></div>
 	<div class="pixTitleHolder"><a href="pear-cream-tart.html"><img src="../../pix/recipes/pear-tart.jpg"><div class="pix-title">Pear cream tart</div></a></div>
 	<div class="pixTitleHolder"><a href="madeleines.html"><img src="../../pix/recipes/madeleine.jpg"><div class="pix-title">Madeleines</div></a></div>
+	<div class="pixTitleHolder"><a href="canneles.html"><img src="../../pix/recipes/canneles.jpg"><div class="pix-title">Cannelés</div></a></div>
 	<div class="clearer"></div>
 </div>
 
@@ -79,6 +80,9 @@
 	</p>
 
 </section>
+
+<footer>&#169; 2020 Olivier Giulieri</footer>
+
 </body>
 
 </html>
