--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -13,7 +13,11 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear cream tart</a> - Madeleines
+<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : 
+<a href="creme-brulee.html">Crème brûlée</a>
+ - <a href="pear-cream-tart.html">Pear cream tart</a>
+ - Madeleines
+ - <a href="canneles.html">Cannelés</a>
 </div>
 
 <section class="c00">
