--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -13,7 +13,11 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : Crème brûlée - <a href="pear-cream-tart.html">Pear cream tart</a> - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : 
+ Crème brûlée
+ - <a href="pear-cream-tart.html">Pear cream tart</a>
+ - <a href="madeleines.html">Madeleines</a>
+ - <a href="canneles.html">Cannelés</a>
 </div>
 
 <section class="c00">
