--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -13,7 +13,11 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : <a href="creme-brulee.html">Crème brûlée</a> - Pear cream tart - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : 
+<a href="creme-brulee.html">Crème brûlée</a> 
+- Pear cream tart 
+- <a href="madeleines.html">Madeleines</a> 
+- <a href="canneles.html">Cannelés</a>
 </div>
 
 <section class="c00">
