--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -57,19 +57,19 @@
 
 <p>Instructions:
 <ol>
-	<li>Prepare yeast according to instructions on package</li>
-	<li>Pre-heat oven at 375°F</li>
-	<li>Mix soft (but not melted) butter and sugar</li>
-	<li>Add eggs and flour (using the sifter) and a pinch of salt</li>
-	<li>Add the yeast or baking powder</li>
-	<li>(optional) Add the lemon zest and/or vanilla extract</li>
-	<li>Mix until the dough is homogeneous</li>
-	<li>Put a little melted butter on the madeleines pan (to prevent sticking)</li>
-	<li>Fill each slot on the madeleines pan w/ dough</li>
-	<li>(optional) Add sliced almonds or pine nuts on top</li>
-	<li>(optional) Add a raspberry in the center</li>
-	<li>Put in the oven for 10 to 15 minutes (until golden)</li>
-	<li>Get the madeleines tray out of the oven, and the madeleines out of the tray, and let cool down</li>
+	<li>Prepare yeast according to instructions on package.</li>
+	<li>Pre-heat oven at 375°F.</li>
+	<li>Mix soft (but not melted) butter and sugar.</li>
+	<li>Add eggs and flour (using the sifter) and a pinch of salt.</li>
+	<li>Add the yeast or baking powder.</li>
+	<li>(optional) Add the lemon zest and/or vanilla extract.</li>
+	<li>Mix until the dough is homogeneous.</li>
+	<li>Put a little melted butter on the madeleines pan (to prevent sticking).</li>
+	<li>Fill each slot on the madeleines pan w/ dough.</li>
+	<li>(optional) Add sliced almonds or pine nuts on top.</li>
+	<li>(optional) Add a raspberry in the center.</li>
+	<li>Put in the oven for 10 to 15 minutes (until golden).</li>
+	<li>Get the madeleines tray out of the oven, and the madeleines out of the tray, and let cool down.</li>
 </ol>
 
 
@@ -87,7 +87,7 @@
 
 </section>
 
-<footer>&#169; 2018 Olivier Giulieri</footer>
+<footer>&#169; 2020 Olivier Giulieri</footer>
 
 </body>
 
