--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -40,20 +40,20 @@
 
 <p>Instructions:
 <ol>
-	<li>Pre-heat oven at 375°F</li>
-	<li>Spread pie crust on dish and make holes with a fork</li>
-	<li>Put in oven for 10 minutes</li>
-	<li>Place pears</li>
-	<li>Cook for 25 min</li>
-	<li>Add cream (egg yolk + whip cream + vanilla + pinch of salt)</li>
-	<li>Put back in oven and turn off oven. Let cook for 5 minutes while oven is cooling down</li>
+	<li>Pre-heat oven at 375°F.</li>
+	<li>Spread pie crust on dish and make holes with a fork.</li>
+	<li>Put in oven for 10 minutes.</li>
+	<li>Place pears.</li>
+	<li>Cook for 25 minutes.</li>
+	<li>Add cream (egg yolk + whip cream + vanilla + pinch of salt).</li>
+	<li>Put back in oven and turn off oven. Let cook for 5 minutes while oven is cooling down.</li>
 </ol>
 
-<p>Notes: great w/ Vanilla ice cream.</p>
+<p>Notes: great with Vanilla ice cream.</p>
 
 </section>
 
-<footer>&#169; 2018 Olivier Giulieri</footer>
+<footer>&#169; 2020 Olivier Giulieri</footer>
 
 </body>
 
