--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -53,30 +53,30 @@
 
 <p>Instructions:
 <ol>
-	<li>pre-heat the oven to 250°F</li>
-	<li>beat the egg yolks (no use for the whites)</li>
-	<li>add the sugar and a pinch of salt</li>
-	<li>add the cream, the milk and the vanilla</li>
-	<li>pour in ramekins</li>
-	<li>(optionally) add fruit in some ramekins</li>
-	<li>prepare "<a class="extlink" target="bm" href="https://en.wikipedia.org/wiki/Bain-marie">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins)</li>
-	<li>bake for about 1 hour depending on your oven (they are cooked when firm but not hard)</li>
-	<li>let cool down and put in the fridge for a few hours (they will be harder when cold)</li>
+	<li>Pre-heat the oven to 250°F.</li>
+	<li>Beat the egg yolks (no use for the whites).</li>
+	<li>Add the sugar and a pinch of salt.</li>
+	<li>Add the cream, the milk and the vanilla.</li>
+	<li>Pour in ramekins.</li>
+	<li>(optionally) Add fruit in some ramekins.</li>
+	<li>Prepare "<a class="extlink" target="bm" href="https://en.wikipedia.org/wiki/Bain-marie">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins).</li>
+	<li>Bake for about 1 hour depending on your oven (they are cooked when firm but not hard).</li>
+	<li>Let cool down and put in the fridge for a few hours (they will be harder when cold).</li>
 </ol>
 
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/creme-brulee-bernzomatic.jpg"></div>
 <p>Instructions for burning the caramel crust (just before serving):
 
 <ol>Using a torch (I personaly use a <a class="extlink" target="b" href="http://www.bernzomatic.com/">Bernzomatic</a>):
-	<li>put some brown sugar on the cold custard.</li>
-	<li>put the flame on the brown sugar (not too close) and it will melt into caramel</li>
+	<li>Put some brown sugar on the cold custard.</li>
+	<li>Put the flame on the brown sugar (not too close) and it will melt into caramel.</li>
 </ol>
 
 <ol>Using a crème brûlée branding iron (the old-fashion way):
-	<li>put some brown sugar on the cold custard. </li>
-	<li>heat the branding iron by putting it directly on the burner until it's hot (but not turning red)</li>
-	<li>put the iron on the brown sugar and it will turn into caramel</li>
-	<li>if the branding iron is hot enough it can be used for 2 cremes in a row otherwise put it back on the burner before the next one</li>
+	<li>Put some brown sugar on the cold custard.</li>
+	<li>Heat the branding iron by putting it directly on the burner until it's hot (but not turning red).</li>
+	<li>Put the iron on the brown sugar and it will turn into caramel.</li>
+	<li>If the branding iron is hot enough it can be used for 2 cremes in a row otherwise put it back on the burner before the next one.</li>
 </ol>
 
 
@@ -88,7 +88,7 @@
 </p>
 </section>
 
-<footer>&#169; 2019 Olivier Giulieri</footer>
+<footer>&#169; 2020 Olivier Giulieri</footer>
 
 </body>
 
