Small edits + cleanups.

--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -44,12 +44,15 @@
 	<li>Spread pie crust on dish and make holes with a fork.</li>
 	<li>Put in oven for 10 minutes.</li>
 	<li>Place pears.</li>
+	<li>(optionally) Sprinkle some cinnamon.</li>
 	<li>Cook for 25 minutes.</li>
 	<li>Add cream (egg yolk + whip cream + vanilla + pinch of salt).</li>
 	<li>Put back in oven and turn off oven. Let cook for 5 minutes while oven is cooling down.</li>
 </ol>
 
 <p>Notes: great with Vanilla ice cream.</p>
+
+<p>Notes: When using apples instead of pears, I sprinkle the tart with brown sugar before baking. Also, apples are less juicy than pears, so I can skip the 10 minutes cooking the crust alone.</p>
 
 </section>
 
