Canneles: adjusted cooking time & temperature + added butter and flour.

--- a/recipes/desserts/canneles.html
+++ b/recipes/desserts/canneles.html
@@ -27,14 +27,14 @@
 
 <p>Hard outside, soft inside, totally delicious.</p>
 
-<p>Prep Time: 15 minutes - Cook Time: 1 hour and 10 minutes - Servings: 12</p>
+<p>Prep Time: 15 minutes - Cook Time: 1 hour minutes - Servings: 12</p>
 
 <p>Ingredients for 12 cannelés:
 <ul>
 	<li>50 cl of milk</li>
 	<li>2 eggs + 2 egg yolks</li>
-	<li>25 grams of butter</li>
-	<li>100 grams of flour</li>
+	<li>30 grams of butter</li>
+	<li>125 grams of flour</li>
 	<li>200 grams of sugar</li>
 	<li>1 pinch of salt</li>
 	<li>1/2 teaspoon vanilla extract</li>
@@ -59,14 +59,14 @@
 	<li>Add the sifted flour, sugar and salt to the eggs.</li>
 	<li>Add the boiling milk.</li>
 	<li>Mix softly and let it cool down.</li>
-	<li>Add the rum.</li>
 	<li>Leave the batter in the fridge for 24 hours.</li>
-	<li>Take out of the fridge for at least an hour.</li>
-	<li>Preheat the oven at 500°F with the cannelés pan.</li>
+	<li>Take the batter out of the fridge for at least an hour.</li>
+	<li>Add the rum.</li>
+	<li>Preheat the oven at 450°F with the cannelés pan.</li>
 	<li>Put butter on the molds and sprinkle a little bit of powdered sugar.</li>
 	<li>Pour the batter 3/4 up the molds.</li>
-	<li>Bake for 10 minutes at 500°F.</li>
-	<li>Lower the temperature to 375°F and continue baking for another 45 minutes.</li>
+	<li>Bake for 10 minutes at 450°F.</li>
+	<li>Lower the temperature to 375°F and continue baking for another 50 minutes.</li>
 	<li>Take the cannelés out of their molds and let them cool down.</li>
 </ol>
 
