Added egg shaped section w/ numerology and comics.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 	 I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.
 	  I work in Tech. I'm French.</p>
 
+	<p>This page is a more fun and personal way to introduce myself than my <a href="https://www.linkedin.com/in/giulieri">LinkedIn</a> and <a href="https://github.com/evoluteur">GitHub</a> profiles.</p>
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
@@ -73,9 +74,9 @@ other way around."</i> - Eric S. Raymond
 <section id="recipes" class="c5"><div class="sTitle">Cooking</div>
 	<p>I like to cook (and eat), especially desserts. My specialties are 
 		<a href="recipes/desserts/creme-brulee.html">crèmes brûlées</a>,
-		<a href="recipes/desserts/pear-cream-tart.html">pear cream tart</a>,
-		<a href="recipes/desserts/madeleines.html">madeleines</a>,
-		and <a href="recipes/desserts/canneles.html">cannelés</a>.</p>
+		<a href="recipes/desserts/pear-cream-tart.html">pear cream tart</a>, and
+		<a href="recipes/desserts/madeleines.html">madeleines</a>.
+		I'm learning to make <a href="recipes/desserts/canneles.html">cannelés</a>.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
@@ -108,8 +109,6 @@ other way around."</i> - Eric S. Raymond
 	<p>... and sometimes in English.</p>
 	<div id="comics_us2" class="pixGroup comicsPix"></div>
 
-	<p>If you are into comics, or curious about European graphic novels, several great ones are now compiled into single books and translated to English.</p>
-	<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
 </section>
 
 <section id="movies" class="c2"><div class="sTitle">Movies</div>
@@ -120,6 +119,24 @@ other way around."</i> - Eric S. Raymond
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
 	<p>I like to meditate and to make <a class="extlink" target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
+</section>
+
+<section class="egg">
+	<div id="you">
+		<div class="ml60">Try something fun and different today:</div>
+			<div class="ml30">
+				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally intrepret them?
+			</div>
+		<div class="ml30">I'm a 
+			<div class="num c7"><span>7</span>
+			</div>
+		</div>
+		<div class="ml0"><br>
+			Maybe treat yourself with some of my favorite graphic novel series now available at Amazon (compiled into single books and translated to English).<br>
+			<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
+		</div>
+	</div>
+	
 </section>
 
 <div class="bottomSpace"></div>
