--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ other way around."</i> - Eric S. Raymond
 	<div id="you">
 		<div class="ml60">Try something fun and different today:</div>
 			<div class="ml30">
-				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally intrepret them?
+				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally interpret them?
 			</div>
 		<div class="ml30">I'm a 
 			<div class="num c7"><span>7</span>
