Added picture of Neige in her cat cave.

--- a/neige.html
+++ b/neige.html
@@ -19,6 +19,11 @@
 
 <section class="c00"> 
 
+	<h2>Neige in her cat cave</h2>
+	<div> 
+		<img class="pixShadow" src="pix/neige/neige-cat-cave.jpg">
+	</div>
+
 	<h2>Selfy with Neige</h2>
 
 	<p>I tried to take a selfy with my beautiful cat... but she wouldn't stand still.</p>
