Using bubbles for first section.

--- a/index.html
+++ b/index.html
@@ -45,15 +45,24 @@
 			</span>
 		</div>
 	</div>
-	<h2 class="helloworld">Hello,</h2>
+	
+	<div class="hello">
+		<h2 class="helloworld">Hello</h2>
+	</div>
+	<div class="dear">Dear anonymous visitor</div>
+	<div class="japancircle"></div>
 </section>
 
 <section id="me" class="c7"><div class="sTitle">Me</div>
-	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
-	 I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.
-	  I work in Tech. I'm French.</p>
+	<div class="me"> 
+		<div>
+			<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). </p>
 
-	<p>This page is a more fun and personal way to introduce myself than my <a href="https://www.linkedin.com/in/giulieri">LinkedIn</a> and <a href="https://github.com/evoluteur">GitHub</a> profiles.</p>
+			<p>I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.
+			I work in Tech. I'm French.</p>
+			<p>I hope you will find this page a more fun and personal way to meet me than my <a href="https://www.linkedin.com/in/giulieri">LinkedIn</a> and <a href="https://github.com/evoluteur">GitHub</a> profiles.</p>
+		</div>		
+	</div>
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
