Text edits + cleanups.

--- a/book-carving.html
+++ b/book-carving.html
@@ -27,6 +27,10 @@
 		<img class="pixShadow" src="pix/art/book-carving-1.jpg">
 	</div>
 
+	<p>Interestingly, I thought I was done, then I thought of more things to do, then again, and again. 
+		It didn't feel like <a class="extlink" target="creep" href="https://en.wikipedia.org/wiki/Scope_creep">scope creep</a>
+		but more like playing the <a class="extlink" target="go" href="https://en.wikipedia.org/wiki/Go_(game)">game of Go</a> and not being sure if the game is over or not.</p>
+	
 	<p>I used the book <a class="extlink" href="https://www.amazon.com/Grand-Tour-Travelling-Architects-26-Nov-2004/dp/B013J969TO/ref=sr_1_8" target="amzn">The Grand Tour</a> for this book carving.</p>
 
 </section>
