--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ other way around."</i> - Eric S. Raymond
 	<p></p>
 
 
-	<p>I recently learned that <a class="extlink" target="ted" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving a try at <a href="book-carving.html">book carving</a>.</p>
-
+	<p>I recently learned that <a class="extlink" target="ted" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving <a href="book-carving.html">a try at book carving</a>.</p>
+	 
 </section>
 
 <section id="comics" class="c3"><div class="sTitle">Graphic Novels</div>
@@ -136,10 +136,10 @@ other way around."</i> - Eric S. Raymond
 			<div class="ml30">
 				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally interpret them?
 			</div>
-		<div class="ml30">I'm a 
-			<div class="num c7"><span>7</span>
+			<div class="ml30">I'm a 
+				<div class="num c7"><span>7</span>
+				</div>
 			</div>
-		</div>
 		<div class="ml0"><br>
 			Maybe treat yourself with some of my favorite graphic novel series now available at Amazon (compiled into single books and translated to English).<br>
 			<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
@@ -151,7 +151,7 @@ other way around."</i> - Eric S. Raymond
 <div class="bottomSpace"></div>
 
 
-<footer>&#169; 2020 Olivier Giulieri - Version 2020.04.20</footer>
+<footer>&#169; 2020 Olivier Giulieri - Version 2020.04.27</footer>
 
 </body>
 
