--- a/recipes/desserts/canneles.html
+++ b/recipes/desserts/canneles.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<title>Canneles recipe</title>
+<title>Cannelés recipe</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
 	<meta name="keywords" content="french homemade canneles caneles cake recipe" />
@@ -69,6 +69,8 @@
 	<li>Lower the temperature to 375°F and continue baking for another 50 minutes.</li>
 	<li>Take the cannelés out of their molds and let them cool down.</li>
 </ol>
+
+<p>Notes: So far my cannelés taste good but I couldn't quite get the prefect crust yet.</p>
 
 </section>
 
