Layout tweaks for mobile.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@ other way around."</i> - Eric S. Raymond
 
 	<p></p>
 
-
 	<p>I recently learned that <a class="extlink" target="ted" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving <a href="book-carving.html">a try at book carving</a>.</p>
 	 
 </section>
@@ -130,7 +129,7 @@ other way around."</i> - Eric S. Raymond
 	<div id="chakras2" class="pixGroup chakraPix"></div>
 </section>
 
-<section class="egg">
+<section id="egg">
 	<div id="you">
 		<div class="ml60">Try something fun and different today:</div>
 			<div class="ml30">
@@ -145,11 +144,9 @@ other way around."</i> - Eric S. Raymond
 			<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
 		</div>
 	</div>
-	
 </section>
 
 <div class="bottomSpace"></div>
-
 
 <footer>&#169; 2020 Olivier Giulieri - Version 2020.04.27</footer>
 
