--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
-<body onload="setupPage()" class="idx">
+<body onload="setupPage()">
 
 <section id="hello" class="c0">
 
@@ -127,6 +127,8 @@ other way around."</i> - Eric S. Raymond
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
 	<p>I like to meditate and to make <a class="extlink" target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
+	<p>I'm learning to play the
+	 <a href="hang.html">handpan</a>.</p>
 </section>
 
 <section id="egg">
@@ -140,7 +142,8 @@ other way around."</i> - Eric S. Raymond
 				</div>
 			</div>
 		<div class="ml0"><br>
-			Maybe treat yourself with some of my favorite graphic novel series now available at Amazon (compiled into single books and translated to English).<br>
+			Maybe treat yourself with some of my favorite european graphic novels.
+			You can now find them on Amazon (compiled into single books and translated to English).<br>
 			<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
 		</div>
 	</div>
@@ -148,7 +151,7 @@ other way around."</i> - Eric S. Raymond
 
 <div class="bottomSpace"></div>
 
-<footer>&#169; 2020 Olivier Giulieri - Version 2020.04.27</footer>
+<footer>&#169; 2020 Olivier Giulieri - Version 2020.05.23</footer>
 
 </body>
 
